# pet_reference_regions

./: .gitignore  CLAUDE.md  README.md  TESTING.md  create_test_nifti.py  pyproject.toml  webapp.MD
.claude/agents/: code-reviewer.md
.github/workflows/: CI.yml  deploy-webapp.yml  python-package.yml
refregion/: cerebellum.py  config.py  metrics.py  morphology.py  refregion.py  wrappers.py
refregion/cli/: ref_cerebellum.py  refregion.py
tests/: test_cerebellum.py  test_cli.py  test_config.py  test_metrics.py  test_morphology.py  test_refregion.py  test_wrappers.py
webapp/: DEPLOY.md  README.md  app.py  index.html  package-lock.json  package.json  refregion-0.1.0-py3-none-any.whl
webapp/coverage/: app.js.html  index.html  pyodide-bridge.js.html  visualization.js.html
webapp/css/: styles.css
webapp/js/: app.js  pyodide-bridge.js  visualization.js
webapp/scripts/: validate-webapp.js
webapp/tests/: app.test.js  pyodide-bridge.test.js  setup.js  visualization.test.js
