[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "refregion"
version = "0.1.0"
description = "This package is thought to gather functions that can be used to create various gray matter references regions for PET analysis."
authors = ["RDoerfel <doerfelruben@aol.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "refregion"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-image = "^0.24.0"
matplotlib = "^3.9.2"
nibabel = "^5.3.0"

[tool.poetry.scripts]
ref_cerebellum = "refregion.cli.ref_cerebellum:main"
refregion = "refregion.cli.refregion:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^25.1.0"
coverage = {extras = ["toml"], version = "^7.6.4"}
pytest-cov = "^5.0.0"

[tool.coverage.paths]
source = ["refregion"]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = ["refregion"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true